--- a/MovieBucket/app/src/main/res/values/strings.xml
+++ b/MovieBucket/app/src/main/res/values/strings.xml
@@ -171,4 +171,5 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="search_hint">Search movies</string>
+    <string name="search_title">Search</string>
 </resources>
