--- a/MovieBucket/app/src/main/res/values/strings.xml
+++ b/MovieBucket/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Movie Bucket</string>
-    <string name="title_activity_explore">Explore</string>
+    <string name="title_fragment_discover">Discover</string>
+    <string name="title_fragment_my_bucket">My Bucket</string>
+    <string name="title_fragment_my_history">My History</string>
+    <string name="title_fragment_about">About</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -91,8 +94,6 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_my_bucket">MyBucket</string>
-    <string name="title_activity_my_history">MyHistory</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
