--- a/MovieBucket/app/src/main/res/values/strings.xml
+++ b/MovieBucket/app/src/main/res/values/strings.xml
@@ -171,6 +171,8 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="search_hint">Search movies</string>
+    <string name="search_hint">Search</string>
     <string name="search_title">Search</string>
+    <string name="title_activity_person_view">Person</string>
+    <string name="title_activity_movie_view">Movie</string>
 </resources>
