--- a/MovieBucket/app/src/main/res/values/strings.xml
+++ b/MovieBucket/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
             <ol>
                 <li>"Christophe Apollon-Roy\n"</li>
                 <li>"Adèle Aubin\n"</li>
-                <li>"Amélie Lacombe-Robillard\n"</li>
+                <li>"Amélie Lacombe Robillard\n"</li>
                 <li>"Stéphane Verville-Vohl"</li>
             </ol>
 
@@ -25,9 +25,10 @@
 
     <!-- Strings related to Settings -->
 
-    <string name="adult_filter">"Hide Adult content"</string>
-    <string name="locale">"Search Language"</string>
-    <string name="def_locale">"en"</string>
+    <string name="adult_filter">"Show adult content"</string>
+    <string name="locale">"Language"</string>
+    <string name="locale_summary">"English</string>
+    <string name="default_locale">"en"</string>
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
